# vgi-translate

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  translate_worker.py
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
scripts/: ensure_argos_pair.py
test/sql/: translate_all.test  translate_detect.test  translate_errors.test  translate_scalar.test
tests/: test_backend.py  test_translate.py
vgi_translate/: __init__.py  backend.py  meta.py  scalars.py  schema_utils.py  tables.py
