[project]
name = "vgi-translate"
version = "0.1.0"
description = "A VGI worker bringing local neural machine translation and language detection into DuckDB/SQL"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Query Farm" }]
keywords = ["vgi", "duckdb", "translation", "nmt", "argos", "nlp"]
dependencies = [
    "vgi-python",
    "argostranslate>=1.9",
    "py3langid>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]

# vgi-python is distributed on PyPI as `vgi-python`. For local development
# against an in-tree checkout, uncomment the source override below (or set
# `UV_INDEX` / use `uv pip install -e ../vgi-python`).
# [tool.uv.sources]
# vgi-python = { path = "../vgi-python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_translate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Heavy tests that need to download an Argos language package are marked
# `download`; skip them with `-m "not download"` (and CI auto-skips when offline).
markers = [
    "download: requires installing an Argos language package (network on first run)",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
