[project]
name = "vgi-translate"
version = "0.1.0"
description = "A VGI worker bringing local neural machine translation and language detection into DuckDB/SQL"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Query Farm" }]
keywords = ["vgi", "duckdb", "translation", "nmt", "argos", "nlp"]
dependencies = [
    "vgi-python>=0.9.0",
    "argostranslate>=1.9",
    "py3langid>=0.3",
]

[project.optional-dependencies]
# HTTP transport: the worker can serve over HTTP (`translate_worker.py --http`) in
# addition to stdio. That path needs vgi-python's `http` extra (waitress).
# CI's http transport leg installs this via `uv sync --extra http`.
http = [
    "vgi-python[http]>=0.9.0",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
    "pydoclint",
]

# vgi-python is distributed on PyPI as `vgi-python`. For local development
# against an in-tree checkout, uncomment the source override below (or set
# `UV_INDEX` / use `uv pip install -e ../vgi-python`).
# [tool.uv.sources]
# vgi-python = { path = "../vgi-python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_translate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Heavy tests that need to download an Argos language package are marked
# `download`; skip them with `-m "not download"` (and CI auto-skips when offline).
markers = [
    "download: requires installing an Argos language package (network on first run)",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
# Docstrings (D) are enforced on the worker package/script (product code), not tests.
"tests/**" = ["D"]
"conftest.py" = ["D"]
"scripts/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
# Docstring consistency gate (complements ruff's D rules: ruff checks docstring
# shape, pydoclint checks documented args/returns/attrs match the code).
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Genuinely untyped third-party libraries (no stubs published).
module = ["argostranslate.*", "py3langid.*"]
ignore_missing_imports = true
